# reinforced_flapper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
src/: __init__.py  agent.py  flappy.py  flappy_env.py  main.py  model.py
src/entities/: __init__.py  background.py  entity.py  floor.py  game_over.py  pipe.py  player.py  score.py  welcome_message.py
src/utils/: __init__.py  constants.py  game_config.py  images.py  sounds.py  utils.py  window.py
