[tool.poetry]
name = "reinforced-flapper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gym = "^0.26.2"
pygame = "^2.6.0"
numpy = "^2.0.0"
stable-baselines3 = "^2.3.2"
gymnasium = "^0.29.1"
ruff = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
